--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -39,12 +39,12 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#39c;
+  color:#2F4F4F;
   text-decoration:none;
 }
 
 a:hover {
-  color:#069;
+  color:#008000;
 }
 
 a small {
